--- a/react-ui/src/app/pages/resume/presentation/index.scss
+++ b/react-ui/src/app/pages/resume/presentation/index.scss
@@ -2,6 +2,7 @@ $screen-sm-min:     768px;
 $gold:         #F4C57D;
 $dark-red:     #8A0707;
 $light-grey:   #E7E7E7;
+$orange:       #FD8419;
 
 #presentation {
     display: flex;
@@ -14,7 +15,7 @@ $light-grey:   #E7E7E7;
     background-size: 100vw 100vh;
     background-position: center;
 
-    #logo {
+    .logo {
         width: 300px;
     }
 
@@ -27,7 +28,7 @@ $light-grey:   #E7E7E7;
         color: $gold;
     }
 
-    #content {
+    .content {
         background-color: $light-grey;
         border-radius: 175px;
         height: 350px;
@@ -44,12 +45,20 @@ $light-grey:   #E7E7E7;
     #menu {
         display: flex;
         margin-top: 30px;
+        background-color: rgba(#FFFFFF, 0.7);
+        padding: 10px 40px;
+        border-radius: 10px;
 
         a {
             display: flex;
             flex-direction: column;
             align-items: center;
             margin-right: 25px;
+            color: black;
+
+            &:last-child {
+                margin-right: 0;
+            }
         }
 
         img {
