--- a/react-ui/src/app/pages/company/index.css
+++ b/react-ui/src/app/pages/company/index.css
@@ -8,12 +8,18 @@
   #company .content {
     width: 100%;
     text-align: center; }
+    #company .content .back {
+      position: absolute;
+      left: 70px;
+      top: 100px; }
     #company .content .logo {
       width: 300px; }
+    #company .content h3 {
+      color: #F4C57D; }
     #company .content #company_presentation {
       background-color: white;
       color: purple; }
-      #company .content #company_presentation h1 {
+      #company .content #company_presentation h3 {
         color: black;
         padding-top: 30px; }
       #company .content #company_presentation .details {
@@ -23,3 +29,21 @@
         padding-top: 10px;
         display: flex;
         flex-wrap: wrap; }
+        #company .content #company_presentation .details p {
+          text-align: left;
+          font-size: 16px;
+          color: black; }
+        #company .content #company_presentation .details button {
+          text-align: center;
+          color: white;
+          background-color: purple;
+          padding: 10px;
+          padding-left: 20px;
+          padding-right: 20px;
+          border-radius: 5px;
+          margin-left: auto;
+          margin-right: auto;
+          margin-top: 30px; }
+        #company .content #company_presentation .details a {
+          margin-left: auto;
+          margin-right: auto; }
