--- a/react-ui/src/app/pages/contact/index.css
+++ b/react-ui/src/app/pages/contact/index.css
@@ -2,38 +2,61 @@
   display: flex;
   justify-content: center;
   height: 100vh;
-  background-color: purple;
+  background: url("https://storage.googleapis.com/jendigitalvision/commun/tablet.jpg");
   background-size: 100vw 100vh;
   color: white; }
   #contact .content {
     width: 100%;
     text-align: center; }
+    #contact .content .back {
+      position: absolute;
+      left: 70px;
+      top: 100px; }
     #contact .content .logo {
+      margin-top: 50px;
       width: 300px; }
-    #contact .content #contact_form {
+    #contact .content #info {
       background-color: white;
-      color: purple; }
-      #contact .content #contact_form h1 {
-        color: black;
-        padding-top: 30px; }
-      #contact .content #contact_form .details {
-        margin: auto;
-        margin-top: 20px;
+      color: black;
+      margin-left: auto;
+      margin-right: auto;
+      width: 70%;
+      margin-top: 50px;
+      display: flex;
+      padding-bottom: 30px;
+      border-radius: 20px; }
+      #contact .content #info h3 {
+        padding-top: 50px; }
+      #contact .content #info #jendigital {
+        border-radius: 20px;
+        width: 180px;
+        height: 180px;
+        margin-top: 40px;
+        margin-left: 100px; }
+      #contact .content #info #info_details {
         padding: 40px;
-        padding-top: 10px;
-        display: flex;
-        flex-wrap: wrap; }
-        #contact .content #contact_form .details .how {
-          width: 30%;
-          height: auto;
-          background-color: purple;
-          margin: 20px;
-          padding: 30px;
-          font-size: 20px;
-          color: white; }
-          #contact .content #contact_form .details .how h2 {
-            color: #F4C57D;
-            margin-top: 0; }
-          #contact .content #contact_form .details .how p {
-            margin-top: 30px;
-            text-align: left; }
+        width: 250px;
+        text-align: left; }
+      #contact .content #info p {
+        margin: 0; }
+      #contact .content #info #name {
+        color: #F4C57D;
+        font-size: 16px; }
+      #contact .content #info #mail {
+        margin-top: 20px; }
+        #contact .content #info #mail a {
+          color: purple;
+          font-weight: bold; }
+      #contact .content #info #profiles {
+        text-align: left; }
+      #contact .content #info img {
+        width: 40px;
+        height: 40px;
+        margin-top: 40px;
+        margin-right: 20px;
+        margin-bottom: 20px; }
+      #contact .content #info #git {
+        height: 40px;
+        width: 150px; }
+      #contact .content #info #tel {
+        color: black; }
