--- a/react-ui/src/app/pages/contact/index.scss
+++ b/react-ui/src/app/pages/contact/index.scss
@@ -6,7 +6,7 @@ $light-grey:   #E7E7E7;
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-color: purple;
+    background: url('https://storage.googleapis.com/jendigitalvision/commun/tablet.jpg');
     background-size: 100vw 100vh;
     color: white;
 
@@ -14,47 +14,83 @@ $light-grey:   #E7E7E7;
         width: 100%;
         text-align: center;
         
+        .back {
+            position: absolute;
+            left: 70px;
+            top: 100px;
+        }
 
         .logo {
+            margin-top: 50px;
             width: 300px;
         }
 
-        #contact_form {
+        #info {
             background-color: white;
-            color: purple;
+            color: black;
+            margin-left: auto;
+            margin-right: auto;
+            width: 70%;
+            margin-top: 50px;
+            display: flex;
+            padding-bottom: 30px;
+            border-radius: 20px;
 
-            h1 {
-                color: black;
-                padding-top: 30px;
+            h3{
+                padding-top: 50px;
             }
 
-            .details {
-                margin: auto;
-                margin-top: 20px;
+            #jendigital {
+                border-radius: 20px;
+                width: 180px;
+                height: 180px;
+                margin-top: 40px;
+                margin-left: 100px;
+            }
+
+            #info_details {
                 padding: 40px;
-                padding-top: 10px;
-                display: flex;
-                flex-wrap: wrap;
+                width: 250px;
+                text-align: left;
+            }
 
-                .how {
-                    width: 30%;
-                    height: auto;
-                    background-color: purple;
-                    margin: 20px;
-                    padding: 30px;
-                    font-size: 20px;
-                    color: white;
+            p {
+                margin: 0;
+            }
 
-                    h2 {
-                        color: $gold;
-                        margin-top: 0;
-                    }
+            #name {
+                color: $gold;
+                font-size: 16px;
+            }
 
-                    p{
-                        margin-top: 30px;
-                        text-align: left;
-                    }
+            #mail {
+                margin-top: 20px;
+                
+                a {
+                    color: purple;
+                    font-weight: bold;
                 }
+            }
+
+            #profiles {
+                text-align: left;
+            }
+
+            img {
+                width: 40px;
+                height: 40px;
+                margin-top: 40px;
+                margin-right: 20px;
+                margin-bottom: 20px;
+            }
+
+            #git {
+                height: 40px;
+                width: 150px;
+            }
+
+            #tel {
+                color: black;
             }
         }
     }
