--- a/react-ui/src/app/pages/presentation/index.css
+++ b/react-ui/src/app/pages/presentation/index.css
@@ -16,13 +16,17 @@
     text-decoration: none;
     color: #F4C57D; }
   #presentation .content {
-    background-color: #E7E7E7;
+    background-color: rgba(255, 255, 255, 0.7);
     border-radius: 175px;
     height: 350px;
     width: 350px;
     display: flex;
     justify-content: center;
     align-items: center; }
+    #presentation .content .back {
+      position: absolute;
+      left: 70px;
+      top: 100px; }
     #presentation .content img {
       width: 300px; }
   #presentation #menu {
@@ -39,6 +43,8 @@
       color: black; }
       #presentation #menu a:last-child {
         margin-right: 0; }
+      #presentation #menu a#english {
+        display: none; }
     #presentation #menu img {
       width: 50px;
       height: 50px; }
