--- a/react-ui/src/app/pages/resume/ambitions/index.scss
+++ b/react-ui/src/app/pages/resume/ambitions/index.scss
@@ -14,6 +14,11 @@ $light-grey:   #E7E7E7;
         width: 100%;
         text-align: center;
         
+        .back {
+            position: absolute;
+            left: 70px;
+            top: 100px;
+        }
 
         .logo {
             width: 300px;
@@ -45,7 +50,7 @@ $light-grey:   #E7E7E7;
                     font-size: 20px;
                     color: white;
 
-                    h2 {
+                    h3 {
                         color: $gold;
                         margin-top: 0;
                     }
