--- a/react-ui/src/app/pages/resume/references/index.css
+++ b/react-ui/src/app/pages/resume/references/index.css
@@ -2,17 +2,21 @@
   display: flex;
   justify-content: center;
   height: 100vh;
-  background-color: purple;
+  background-color: #2F0A57;
   background-size: 100vw 100vh;
   color: white; }
   #references .content {
     width: 100%;
     text-align: center; }
+    #references .content .back {
+      position: absolute;
+      left: 70px;
+      top: 100px; }
     #references .content .logo {
       width: 300px; }
     #references .content #ref_description {
       background-color: white;
-      color: purple; }
+      color: #931675; }
       #references .content #ref_description h1 {
         color: black;
         padding-top: 30px; }
@@ -26,14 +30,15 @@
         #references .content #ref_description .details .ref {
           width: 30%;
           height: auto;
-          background-color: purple;
+          background-color: #931675;
           margin: 20px;
           padding: 30px;
-          font-size: 20px;
+          font-size: 16px;
           color: white; }
-          #references .content #ref_description .details .ref h2 {
+          #references .content #ref_description .details .ref h4 {
             color: #F4C57D;
-            margin-top: 0; }
+            margin-top: 0;
+            font-size: 15px; }
           #references .content #ref_description .details .ref p {
             margin-top: 30px;
             text-align: left; }
