--- a/react-ui/src/app/pages/resume/tech/index.css
+++ b/react-ui/src/app/pages/resume/tech/index.css
@@ -2,18 +2,24 @@
   display: flex;
   justify-content: center;
   height: 100vh;
-  background-color: purple;
+  background-color: #2F0A57;
   background-size: 100vw 100vh;
   color: white; }
   #tech .content {
     width: 100%;
     text-align: center; }
+    #tech .content .back {
+      position: absolute;
+      left: 70px;
+      top: 100px; }
     #tech .content .logo {
       width: 300px; }
+    #tech .content h2 {
+      color: #F4C57D; }
     #tech .content #stacks {
       background-color: white;
       color: purple; }
-      #tech .content #stacks h1 {
+      #tech .content #stacks h3 {
         color: black;
         padding-top: 30px; }
       #tech .content #stacks .details {
@@ -26,7 +32,7 @@
         #tech .content #stacks .details .hardskills {
           width: 30%;
           height: auto;
-          background-color: purple;
+          background-color: #931675;
           margin: 20px;
           padding: 30px;
           font-size: 20px;
