--- a/react-ui/src/app/pages/resume/tech/index.scss
+++ b/react-ui/src/app/pages/resume/tech/index.scss
@@ -1,12 +1,14 @@
 $screen-sm-min:     768px;
 $gold:         #F4C57D;
 $light-grey:   #E7E7E7;
+$pink:         #931675;
+$purple:       #2F0A57;
 
 #tech {
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-color: purple;
+    background-color: $purple;
     background-size: 100vw 100vh;
     color: white;
 
@@ -14,16 +16,25 @@ $light-grey:   #E7E7E7;
         width: 100%;
         text-align: center;
         
+        .back {
+            position: absolute;
+            left: 70px;
+            top: 100px;
+        }
 
         .logo {
             width: 300px;
+        }
+
+        h2 {
+            color: $gold;
         }
 
         #stacks {
             background-color: white;
             color: purple;
 
-            h1 {
+            h3 {
                 color: black;
                 padding-top: 30px;
             }
@@ -39,7 +50,7 @@ $light-grey:   #E7E7E7;
                 .hardskills {
                     width: 30%;
                     height: auto;
-                    background-color: purple;
+                    background-color: $pink;
                     margin: 20px;
                     padding: 30px;
                     font-size: 20px;
